@@ -1,0 +1,14 @@
+{
+    "clearconsoleoptions": {
+        "option": "clear console on startup",
+        "state": "Enabled"
+    },
+    "consoletitleoption": {
+        "option": "console title",
+        "value": "Sanic Bot Terminal"
+    },
+    "displaytermveroption": {
+        "option": "display terminal version",
+        "state": "Enabled"
+    }
+}
